fixed some alignment issues

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   height: 0.3em;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 2) {
   *::-webkit-scrollbar {
     display: none;
   }
